[metadata]
name = dexonline-api
version = 1.0.0
author = Radu-Alexandru Popa
author_email = poparadu501@gmail.com
description = Unofficial dexonline.ro API
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10

[options.packages.find]
where = dexonline_api/*
